fix text overflow on repo box

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -430,11 +430,15 @@ section {
 .repo {
     flex: 0 auto;
     min-width: fit-content;
+    overflow-y: auto;
+
+    @include custom-scrollbar();
 
     h3 {
         width: 100%;
         display: inline-block;
         white-space: nowrap;
+        text-transform: capitalize;
     }
     p {
         max-width: 400px;
